Revert "arrange  folder structure"

--- a/front-end/src/Styles/hero_section.css
+++ b/front-end/src/Styles/hero_section.css
@@ -1,10 +1,5 @@
-.main {
-  margin-top: 2.5rem;
-}
-
 .main__title {
-  margin-bottom: 1.75rem;
-  line-height: 4.375rem;
+  margin: 0;
   font-family: "Playfair Display", serif;
   font-size: 4.5rem;
   color: #fff;
@@ -12,8 +7,8 @@
 
 .main__subtitle {
   margin-top: 0;
-  margin-bottom: 1.25rem;
   font-size: 1.125rem;
+  width: 75%;
   color: #898a8e;
 }
 
@@ -27,6 +22,7 @@
 }
 
 .main__img {
-  display: none;
+  height: 28.125rem;
+  width: 28.125rem;
 }
 /*# sourceMappingURL=hero_section.css.map */
