--- a/front-end/src/Styles/hero_section.scss
+++ b/front-end/src/Styles/hero_section.scss
@@ -1,9 +1,5 @@
-.main {
-  margin-top: 2.5rem;
-}
 .main__title {
-  margin-bottom: 1.75rem;
-  line-height: 4.375rem;
+  margin: 0;
   font-family: "Playfair Display", serif;
   font-size: 4.5rem;
   color: #fff;
@@ -11,8 +7,8 @@
 
 .main__subtitle {
   margin-top: 0;
-  margin-bottom: 1.25rem;
   font-size: 1.125rem;
+  width: 75%;
   color: #898a8e;
 }
 
@@ -26,5 +22,6 @@
 }
 
 .main__img {
-  display: none;
+  height: 28.125rem;
+  width: 28.125rem;
 }
