--- a/front-end/src/Styles/NavbarCSS/nav.css
+++ b/front-end/src/Styles/NavbarCSS/nav.css
@@ -29,6 +29,12 @@
   margin-left: auto;
 }
 
+@media (max-width: 975px) {
+  .nav .navHolder__buttonHolder {
+    display: none;
+  }
+}
+
 .nav .navHolder__buttonHolder__buttons {
   font-family: Quicksand, sans-serif;
   font-size: 1.25rem;
@@ -89,20 +95,6 @@
 }
 
 @media (max-width: 30rem) {
-  .nav .mobileLogo {
-    width: 100%;
-    visibility: visible;
-    position: relative;
-    left: 35.51%;
-  }
-  .nav .navHolder__logoHolder__logo,
-  .nav .navHolder__logoHolder__logoTitle,
-  .nav .navHolder__buttonHolder {
-    display: none;
-  }
-}
-
-@media (max-width: 30rem) {
   .flex {
     margin: 2rem;
   }
@@ -110,5 +102,99 @@
 
 .navHolder__buttonHolder__buttons + .navHolder__buttonHolder__buttons {
   margin-left: 5rem;
+}
+
+.menu-bars {
+  font-size: 2rem;
+  color: white;
+  margin-left: 0px;
+  margin-top: 35px;
+}
+
+@media (min-width: 975px) {
+  .menu-bars {
+    display: none;
+  }
+}
+
+.nav-menu {
+  background-color: #060b26;
+  width: 250px;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  -webkit-transition: 850ms;
+  transition: 850ms;
+}
+
+.nav-menu.active {
+  left: 0;
+  -webkit-transition: 350ms;
+  transition: 350ms;
+}
+
+.nav-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 8px 0px 8px 16px;
+  list-style: none;
+  height: 60px;
+}
+
+.nav-text a {
+  text-decoration: none;
+  color: #f5f5f5;
+  font-size: 18px;
+  width: 95%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 16px;
+  border-radius: 4px;
+}
+
+.nav-text a:hover {
+  background-color: #1a83ff;
+}
+
+.nav-menu-items {
+  width: 100%;
+}
+
+.navbar-toggle {
+  background-color: #060b26;
+  width: 100%;
+  height: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+span {
+  margin-left: 16px;
 }
 /*# sourceMappingURL=nav.css.map */
