--- a/front-end/src/Styles/NavbarCSS/nav.scss
+++ b/front-end/src/Styles/NavbarCSS/nav.scss
@@ -33,6 +33,9 @@
     &__buttonHolder {
       margin-left: auto;
 
+      @media (max-width: 975px) {
+        display: none;
+      }
       // &__buttons + &__buttons {
       //   margin-left: 4.75rem;
       // }
@@ -101,24 +104,6 @@
       transform: translateY(3px);
     }
   }
-  // .mobileLogo,
-  // .nav__button {
-  //   display: none; // visibility: hidden;
-  // }
-  @media (max-width: 30rem) {
-    .mobileLogo {
-      width: 100%;
-      visibility: visible;
-      position: relative;
-      left: 35.51%;
-    }
-
-    .navHolder__logoHolder__logo,
-    .navHolder__logoHolder__logoTitle,
-    .navHolder__buttonHolder {
-      display: none;
-    }
-  }
 }
 @media (max-width: 30rem) {
   .flex {
@@ -129,4 +114,74 @@
 // i dont know why tf is not working on line 34
 .navHolder__buttonHolder__buttons + .navHolder__buttonHolder__buttons {
   margin-left: 5rem;
+}
+
+.menu-bars {
+  font-size: 2rem;
+  color: white;
+  margin-left: 0px;
+  margin-top: 35px;
+
+  @media (min-width: 975px) {
+    display: none;
+  }
+}
+
+.nav-menu {
+  background-color: #060b26;
+  width: 250px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  transition: 850ms;
+}
+
+.nav-menu.active {
+  left: 0;
+  transition: 350ms;
+}
+
+.nav-text {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 8px 0px 8px 16px;
+  list-style: none;
+  height: 60px;
+}
+
+.nav-text a {
+  text-decoration: none;
+  color: #f5f5f5;
+  font-size: 18px;
+  width: 95%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  border-radius: 4px;
+}
+
+.nav-text a:hover {
+  background-color: #1a83ff;
+}
+
+.nav-menu-items {
+  width: 100%;
+}
+
+.navbar-toggle {
+  background-color: #060b26;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+span {
+  margin-left: 16px;
 }
