--- a/front-end/src/Styles/FooterCSS/footer.scss
+++ b/front-end/src/Styles/FooterCSS/footer.scss
@@ -5,12 +5,8 @@
   img {
     margin-top: 1.75rem;
     margin-left: auto;
+    max-width: 100%;
   }
-
-  hr {
-    margin: 0 2.5rem;
-  }
-
   footer {
     padding: 1rem;
 
