--- a/front-end/src/Styles/HolderCSS/Holder.css
+++ b/front-end/src/Styles/HolderCSS/Holder.css
@@ -1,6 +1,1 @@
-.holder {
-  position: relative;
-  top: 61px;
-  background: burlywood;
-}
-/*# sourceMappingURL=Holder.css.map */
+/* No CSS *//*# sourceMappingURL=Holder.css.map */
