--- a/front-end/src/Styles/TeamCSS/Team.css
+++ b/front-end/src/Styles/TeamCSS/Team.css
@@ -1,5 +1,1 @@
-.Team {
-  position: relative;
-  top: 61px;
-}
-/*# sourceMappingURL=Team.css.map */
+/* No CSS *//*# sourceMappingURL=Team.css.map */
