--- a/front-end/src/Styles/NavbarCSS/nav.css
+++ b/front-end/src/Styles/NavbarCSS/nav.css
@@ -39,7 +39,7 @@
   font-family: Quicksand, sans-serif;
   font-size: 1.25rem;
   font-weight: 700;
-  line-height: 1.5625rem;
+  line-height: 1.75rem;
   color: #898a8e;
   -webkit-text-decoration-line: none;
           text-decoration-line: none;
@@ -49,54 +49,12 @@
   color: #fff;
 }
 
-.nav__button {
-  cursor: pointer;
-  border: 0;
-  width: 3em;
-  height: 3em;
-  padding: 0em;
-  border-radius: 50%;
-  background: #000;
-  color: white;
-  -webkit-transition: opacity 250ms ease;
-  transition: opacity 250ms ease;
-  position: absolute;
-}
-
-.nav__button:focus, .nav__button:hover {
-  opacity: 0.75;
-}
-
-.nav__hamburger {
-  width: 50%;
-  position: relative;
-}
-
-.nav__hamburger, .nav__hamburger::before, .nav__hamburger::after {
-  display: block;
-  margin: 0 auto;
-  height: 3px;
-  background: white;
-}
-
-.nav__hamburger::before, .nav__hamburger::after {
-  content: "";
-  width: 100%;
-}
-
-.nav__hamburger::before {
-  -webkit-transform: translateY(-6px);
-          transform: translateY(-6px);
-}
-
-.nav__hamburger::after {
-  -webkit-transform: translateY(3px);
-          transform: translateY(3px);
-}
-
-@media (max-width: 30rem) {
-  .flex {
-    margin: 2rem;
+@media (max-width: 61rem) {
+  .nav .navHolder__logoHolder {
+    margin: auto;
+  }
+  .nav .navHolder__logoHolder__logo {
+    display: none;
   }
 }
 
@@ -107,11 +65,14 @@
 .menu-bars {
   font-size: 2rem;
   color: white;
-  margin-left: 0px;
-  margin-top: 35px;
+  margin-top: auto;
 }
 
-@media (min-width: 975px) {
+.menu-bars__exit {
+  margin-left: 1.25rem;
+}
+
+@media (min-width: 61rem) {
   .menu-bars {
     display: none;
   }
@@ -127,9 +88,10 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: -100%;
+  z-index: 999999999;
   -webkit-transition: 850ms;
   transition: 850ms;
 }
@@ -141,15 +103,6 @@
 }
 
 .nav-text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding: 8px 0px 8px 16px;
   list-style: none;
   height: 60px;
@@ -157,30 +110,17 @@
 
 .nav-text a {
   text-decoration: none;
-  color: #f5f5f5;
-  font-size: 18px;
-  width: 95%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  color: #fff;
   padding: 0 16px;
-  border-radius: 4px;
-}
-
-.nav-text a:hover {
-  background-color: #1a83ff;
 }
 
 .nav-menu-items {
   width: 100%;
+  background-color: #000;
 }
 
 .navbar-toggle {
-  background-color: #060b26;
+  background-color: #000000;
   width: 100%;
   height: 80px;
   display: -webkit-box;
@@ -195,6 +135,12 @@
 }
 
 span {
-  margin-left: 16px;
+  font-weight: 300;
+  font-size: 2.25rem;
+  line-height: 3rem;
+}
+
+span:hover {
+  font-weight: 500;
 }
 /*# sourceMappingURL=nav.css.map */
