--- a/front-end/src/Styles/NavbarCSS/nav.scss
+++ b/front-end/src/Styles/NavbarCSS/nav.scss
@@ -2,32 +2,20 @@
   .navHolder {
     margin-top: 1.0625rem;
     background-color: #000000;
-    // height: 61px;
     display: flex;
-    // justify-content: space-between;
-    // position: fixed;
-    // width: 100%;
-    // z-index: 1;
 
     &__logoHolder {
-      // width: 100%;
-      // margin: 0 auto;
       color: white;
       display: flex;
       &__logo {
         margin: 0;
         height: 7.5rem;
         width: 7.5rem;
-        // border-radius: 50%;
-        // height: 50px;
-        // margin: 5px 12px;
       }
       &__logoTitle {
         margin: auto 0;
         font-family: megrim;
         font-size: 2.5rem;
-        // font-weight: 700;
-        // font-size: 17px;
       }
     }
     &__buttonHolder {
@@ -36,78 +24,27 @@
       @media (max-width: 975px) {
         display: none;
       }
-      // &__buttons + &__buttons {
-      //   margin-left: 4.75rem;
-      // }
 
       &__buttons {
         font-family: Quicksand, sans-serif;
         font-size: 1.25rem;
         font-weight: 700;
-        line-height: 1.5625rem;
+        line-height: 1.75rem;
         color: #898a8e;
         text-decoration-line: none;
-
-        // background-color: black;
-        // border: none;
-        // font-weight: 900;
-        // margin: 20px 30px;
       }
       &__buttons--highlight {
         color: #fff;
       }
     }
-  }
-  &__button {
-    cursor: pointer;
-    border: 0;
-    width: 3em;
-    height: 3em;
-    padding: 0em;
-    border-radius: 50%;
-    background: #000;
-    color: white;
-    transition: opacity 250ms ease;
-
-    position: absolute;
-
-    &:focus,
-    &:hover {
-      opacity: 0.75;
+    @media (max-width: 61rem) {
+      &__logoHolder {
+        margin: auto;
+        &__logo {
+          display: none;
+        }
+      }
     }
-  }
-
-  &__hamburger {
-    width: 50%;
-    position: relative;
-
-    &,
-    &::before,
-    &::after {
-      display: block;
-      margin: 0 auto;
-      height: 3px;
-      background: white;
-    }
-
-    &::before,
-    &::after {
-      content: "";
-      width: 100%;
-    }
-
-    &::before {
-      transform: translateY(-6px);
-    }
-
-    &::after {
-      transform: translateY(3px);
-    }
-  }
-}
-@media (max-width: 30rem) {
-  .flex {
-    margin: 2rem;
   }
 }
 
@@ -119,10 +56,12 @@
 .menu-bars {
   font-size: 2rem;
   color: white;
-  margin-left: 0px;
-  margin-top: 35px;
+  margin-top: auto;
 
-  @media (min-width: 975px) {
+  &__exit {
+    margin-left: 1.25rem;
+  }
+  @media (min-width: 61rem) {
     display: none;
   }
 }
@@ -133,9 +72,10 @@
   height: 100vh;
   display: flex;
   justify-content: center;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: -100%;
+  z-index: 999999999; // https://www.nomageddon.com/wp-content/uploads/2015/10/9000.jpg?x69765
   transition: 850ms;
 }
 
@@ -145,9 +85,6 @@
 }
 
 .nav-text {
-  display: flex;
-  justify-content: start;
-  align-items: center;
   padding: 8px 0px 8px 16px;
   list-style: none;
   height: 60px;
@@ -155,26 +92,17 @@
 
 .nav-text a {
   text-decoration: none;
-  color: #f5f5f5;
-  font-size: 18px;
-  width: 95%;
-  height: 100%;
-  display: flex;
-  align-items: center;
+  color: #fff;
   padding: 0 16px;
-  border-radius: 4px;
-}
-
-.nav-text a:hover {
-  background-color: #1a83ff;
 }
 
 .nav-menu-items {
   width: 100%;
+  background-color: #000;
 }
 
 .navbar-toggle {
-  background-color: #060b26;
+  background-color: #000000;
   width: 100%;
   height: 80px;
   display: flex;
@@ -183,5 +111,10 @@
 }
 
 span {
-  margin-left: 16px;
+  font-weight: 300;
+  font-size: 2.25rem;
+  line-height: 3rem;
+  &:hover {
+    font-weight: 500;
+  }
 }
