--- a/front-end/src/Styles/FooterCSS/footer.css
+++ b/front-end/src/Styles/FooterCSS/footer.css
@@ -1,13 +1,6 @@
-.bottom {
-  background-image: url("../third_stroke.png");
-  background-repeat: no-repeat;
-  background-position-y: 23rem;
-}
-
 .bottom img {
   margin-top: 1.75rem;
   margin-left: auto;
-  max-width: 100%;
 }
 
 .bottom footer {
@@ -20,6 +13,13 @@
   font-size: 24px;
   font-weight: 500;
   line-height: 1.875rem;
+}
+
+@media (max-width: 30.5625rem) {
+  .bottom footer p {
+    font-weight: 500;
+    font-size: 1rem;
+  }
 }
 
 .bottom footer a img {
