--- a/front-end/src/Styles/FooterCSS/footer.scss
+++ b/front-end/src/Styles/FooterCSS/footer.scss
@@ -1,11 +1,7 @@
 .bottom {
-  background-image: url("../third_stroke.png");
-  background-repeat: no-repeat;
-  background-position-y: 23rem;
   img {
     margin-top: 1.75rem;
     margin-left: auto;
-    max-width: 100%;
   }
   footer {
     padding: 1rem;
@@ -16,6 +12,11 @@
       font-size: 24px;
       font-weight: 500;
       line-height: 1.875rem;
+
+      @media (max-width: 30.5625rem) {
+        font-weight: 500;
+        font-size: 1rem;
+      }
     }
 
     a img {
