--- a/front-end/src/Styles/NavbarCSS/nav.scss
+++ b/front-end/src/Styles/NavbarCSS/nav.scss
@@ -1,4 +1,7 @@
 .nav {
+  @media (max-width: 60.9375rem) {
+    margin-top: 2.6875rem;
+  }
   .navHolder {
     margin-top: 1.0625rem;
     background-color: #000000;
@@ -16,12 +19,22 @@
         margin: auto 0;
         font-family: megrim;
         font-size: 2.5rem;
+
+        @media (max-width: 60.9375rem) {
+          display: none;
+        }
+      }
+      @media (max-width: 60.9375rem) {
+        display: none;
       }
     }
     &__buttonHolder {
       margin-left: auto;
 
       @media (max-width: 975px) {
+        margin-inline: auto;
+      }
+      @media (max-width: 43.75rem) {
         display: none;
       }
 
@@ -33,7 +46,7 @@
         color: #898a8e;
         text-decoration-line: none;
       }
-      &__buttons--highlight {
+      .active {
         color: #fff;
       }
     }
@@ -61,7 +74,7 @@
   &__exit {
     margin-left: 1.25rem;
   }
-  @media (min-width: 61rem) {
+  @media (min-width: 43.75rem) {
     display: none;
   }
 }
@@ -106,7 +119,7 @@
   width: 100%;
   height: 80px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
