--- a/front-end/src/Styles/HolderCSS/Holder.css
+++ b/front-end/src/Styles/HolderCSS/Holder.css
@@ -1,7 +1,118 @@
 #canvas {
   border: 6px solid dimgrey;
   background-color: white;
-  position: relative;
-  bottom: 120px;
+}
+
+.holderCanvas {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.holderCanvas__buttonContainer__colourBox {
+  width: 490px;
+}
+
+.holderCanvas__buttonContainer__colourBox__blue {
+  background-color: #0000ff;
+  height: 60px;
+  width: 100px;
+  border-radius: 26px;
+  border-color: white;
+  border-width: thick;
+  border-style: solid;
+  margin: 10px;
+}
+
+.holderCanvas__buttonContainer__colourBox__white {
+  background-color: #ffffff;
+  height: 60px;
+  width: 100px;
+  border-radius: 26px;
+  border-color: white;
+  border-width: thick;
+  border-style: solid;
+  margin: 10px;
+}
+
+.holderCanvas__buttonContainer__colourBox__black {
+  background-color: #000000;
+  height: 60px;
+  width: 100px;
+  border-radius: 26px;
+  border-color: white;
+  border-width: thick;
+  border-style: solid;
+  margin: 10px;
+}
+
+.holderCanvas__buttonContainer__colourBox__red {
+  background-color: #ff0000;
+  height: 60px;
+  width: 100px;
+  border-radius: 26px;
+  border-color: white;
+  border-width: thick;
+  border-style: solid;
+  margin: 10px;
+}
+
+.holderCanvas__buttonContainer__colourBox__green {
+  background-color: #00ff00;
+  height: 60px;
+  width: 100px;
+  border-radius: 26px;
+  border-color: white;
+  border-width: thick;
+  border-style: solid;
+  margin: 10px;
+}
+
+.holderCanvas__buttonContainer__colourBox__yellow {
+  background-color: #ffff00;
+  height: 60px;
+  width: 100px;
+  border-radius: 26px;
+  border-color: white;
+  border-width: thick;
+  border-style: solid;
+  margin: 10px;
+}
+
+.holderCanvas__buttonContainer__colourBox__orange {
+  background-color: #ffa500;
+  height: 60px;
+  width: 100px;
+  border-radius: 26px;
+  border-color: white;
+  border-width: thick;
+  border-style: solid;
+  margin: 10px;
+}
+
+.holderCanvas__buttonContainer__colourBox__purple {
+  background-color: #800080;
+  height: 60px;
+  width: 100px;
+  border-radius: 26px;
+  border-color: white;
+  border-width: thick;
+  border-style: solid;
+  margin: 10px;
+}
+
+.holderCanvas__buttonContainer__downloadBox__downloadbuttons {
+  height: 60px;
+  width: 100px;
+  border-radius: 26px;
+  border-color: white;
+  border-width: thick;
+  border-style: solid;
+  margin: 10px;
+}
+
+.test {
+  height: 44px;
+  width: 57px;
 }
 /*# sourceMappingURL=Holder.css.map */
