--- a/front-end/src/Styles/HolderCSS/Holder.css
+++ b/front-end/src/Styles/HolderCSS/Holder.css
@@ -1,12 +1,19 @@
+.canvas-container {
+  max-width: 500px;
+}
+
 #canvas {
-  border: 6px solid dimgrey;
+  border: 1px solid dimgrey;
   background-color: white;
+  width: 100%;
 }
 
 .holderCanvas {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 @media (max-width: 550px) {
@@ -15,15 +22,27 @@
   }
 }
 
+.holderCanvas__buttonContainer {
+  margin-left: 4rem;
+}
+
+@media (max-width: 64.6875rem) {
+  .holderCanvas__buttonContainer {
+    margin-left: 0;
+  }
+}
+
+.holderCanvas__buttonContainer__widthBox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .holderCanvas__buttonContainer__widthBox__widthButtonsTitle {
-  width: 100px;
-  margin: 10px;
-  font-size: 36px;
-  font-weight: 700;
-  height: 60px;
-  width: 100px;
-  margin: 10px;
-  font-size: 35px;
+  font-weight: 500;
 }
 
 .holderCanvas__buttonContainer__widthBox__widthButtons {
@@ -44,6 +63,9 @@
 }
 
 .holderCanvas__buttonContainer__eraserBox__eraserButtons {
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
   height: 60px;
   width: 100px;
   border-radius: 26px;
@@ -54,7 +76,18 @@
 }
 
 .holderCanvas__buttonContainer__colourBox {
-  width: 490px;
+  max-width: 490px;
+}
+
+@media (max-width: 61.5625rem) {
+  .holderCanvas__buttonContainer__colourBox {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .holderCanvas__buttonContainer__colourBox__blue {
@@ -145,14 +178,21 @@
   margin: 10px;
 }
 
+.holderCanvas__buttonContainer__downloadBox {
+  margin: auto;
+}
+
 .holderCanvas__buttonContainer__downloadBox__downloadbuttons {
   height: 60px;
-  width: 100px;
+  width: 100%;
   border-radius: 26px;
   border-color: white;
   border-width: thick;
   border-style: solid;
-  margin: 10px;
+  margin: 0.625rem 0;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 45px;
 }
 
 .holderCanvas__buttonContainer__downloadBox__downloadbuttons__pic {
