fix some issues

--- a/front-end/src/Styles/FeaturesCSS/features.css
+++ b/front-end/src/Styles/FeaturesCSS/features.css
@@ -1,3 +1,9 @@
+img {
+  width: 100%;
+  margin-top: 1.75rem;
+  margin-left: auto;
+}
+
 .features {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
