--- a/front-end/src/Styles/FooterCSS/footer.scss
+++ b/front-end/src/Styles/FooterCSS/footer.scss
@@ -1,7 +1,7 @@
 .bottom {
-  img {
-    margin-top: 1.75rem;
-    margin-left: auto;
+  .flex,
+  hr {
+    margin-inline: 2.5rem;
   }
   footer {
     padding: 1rem;
