--- a/front-end/src/Styles/NavSideBarCSS/NavSideBar.css
+++ b/front-end/src/Styles/NavSideBarCSS/NavSideBar.css
@@ -1,6 +1,6 @@
 .navSidebarButton {
   height: 37px;
-  width: 23%;
+  width: 18.4375rem;
   margin-top: 4px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -11,6 +11,8 @@
 }
 
 .menu-bars2 {
+  position: absolute;
+  right: 1.25rem;
   font-size: 2rem;
   color: white;
 }
