--- a/front-end/src/Styles/FeaturesCSS/features.scss
+++ b/front-end/src/Styles/FeaturesCSS/features.scss
@@ -1,3 +1,9 @@
+img {
+  width: 100%;
+  margin-top: 1.75rem;
+  margin-left: auto;
+}
+
 .features {
   justify-content: space-between;
   flex-wrap: wrap;
