--- a/front-end/src/Styles/HomeCSS/hero_section.css
+++ b/front-end/src/Styles/HomeCSS/hero_section.css
@@ -1,6 +1,19 @@
+@media (max-width: 81.3125rem) {
+  .main {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .main__description {
   margin-top: 6.25rem;
   max-width: 33rem;
+}
+
+@media (max-width: 80.9375rem) {
+  .main__description {
+    margin-inline: auto;
+  }
 }
 
 .main__title {
@@ -26,7 +39,7 @@
 }
 
 .main__button {
-  padding: 1.0625rem 12.5rem;
+  padding: 17px 100px;
   background: #4038ff;
   border-style: none;
   color: #fff;
@@ -38,18 +51,18 @@
   text-decoration: none;
 }
 
-@media (max-width: 78.6875rem) {
-  .main__button {
-    padding: 17px 100px;
-  }
-}
-
-.main__img {
+.main video {
   margin-left: auto;
   margin-top: auto;
   max-width: 100%;
-  width: 48rem;
-  height: 24rem;
+  max-height: 19rem;
+}
+
+@media (max-width: 80.9375rem) {
+  .main video {
+    margin-top: 2.0625rem;
+    margin-inline: auto;
+  }
 }
 
 @media (max-width: 61rem) {
