--- a/front-end/src/Styles/TeamCSS/Team.css
+++ b/front-end/src/Styles/TeamCSS/Team.css
@@ -11,7 +11,7 @@
       grid-template-columns: 1fr 3fr;
   -ms-grid-rows: auto;
       grid-template-rows: auto;
-      grid-template-areas: "image name name" "image info info" ". . .";
+      grid-template-areas: "image name name" "image info info" ". . .";
 }
 
 .grid .image {
@@ -25,6 +25,7 @@
 }
 
 .grid .name {
+  margin-left: 30px;
   -ms-grid-row: 1;
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
@@ -44,6 +45,7 @@
 }
 
 .grid .info {
+  margin-left: 30px;
   grid-area: "info";
 }
 
@@ -75,6 +77,7 @@
 
 .grid .info .socials a img {
   height: 20px;
+  margin: auto;
 }
 
 @media (max-width: 60.9375rem) {
@@ -94,6 +97,8 @@
         grid-column-start: 1;
     grid-column-end: -1;
     grid-area: "";
+    margin-top: 1.25rem;
+    margin-left: 0;
   }
   .grid .info .socials .flex {
     margin: auto;
@@ -125,7 +130,7 @@
     grid-column-end: -1;
   }
   .grid .socials a img {
-    max-width: 2.125rem;
+    min-width: 2.125rem;
   }
   .grid .socials a + a {
     margin-left: 3.375rem;
