--- a/front-end/src/Styles/TeamCSS/Team.scss
+++ b/front-end/src/Styles/TeamCSS/Team.scss
@@ -19,6 +19,8 @@
     margin: auto;
   }
   .name {
+    margin-left: 30px;
+
     grid-area: name;
 
     h2 {
@@ -33,6 +35,8 @@
     }
   }
   .info {
+    margin-left: 30px;
+
     grid-area: "info";
 
     p {
@@ -58,6 +62,7 @@
 
         img {
           height: 20px;
+          margin: auto;
         }
       }
     }
@@ -81,6 +86,8 @@
       grid-column-start: 1;
       grid-column-end: -1;
       grid-area: "";
+      margin-top: 1.25rem;
+      margin-left: 0;
       .socials {
         .flex {
           margin: auto;
@@ -111,7 +118,7 @@
     }
     .socials {
       a img {
-        max-width: 2.125rem;
+        min-width: 2.125rem;
       }
       a + a {
         margin-left: 3.375rem;
