--- a/front-end/src/Styles/HomeCSS/hero_section.scss
+++ b/front-end/src/Styles/HomeCSS/hero_section.scss
@@ -1,4 +1,7 @@
 .main {
+  @media (max-width: 63rem) {
+    display: block;
+  }
   &__description {
     margin-top: 2.25rem;
     max-width: 33rem;
