fixed navsidebar responsive issue

--- a/front-end/src/Styles/HolderCSS/Holder.scss
+++ b/front-end/src/Styles/HolderCSS/Holder.scss
@@ -25,6 +25,7 @@
       align-items: center;
       &__widthButtonsTitle {
         font-weight: 500;
+        width: 7rem;
       }
       &__widthButtons {
         height: 60px;
