--- a/front-end/src/Styles/NavSideBarCSS/NavSideBar.css
+++ b/front-end/src/Styles/NavSideBarCSS/NavSideBar.css
@@ -9,19 +9,32 @@
 
 .menu-bars2 {
   position: absolute;
-  right: 1.25rem;
+  right: 4.25rem;
   font-size: 2rem;
   color: white;
+  top: 1px;
 }
 
-.menu-bars2__exit2 {
-  margin-left: 1.25rem;
+@media (max-width: 38rem) {
+  .menu-bars2 {
+    right: 4.25rem;
+    font-size: 2rem;
+    color: white;
+    position: static;
+  }
+}
+
+@media (max-width: 71rem) {
+  .menu-bars2 {
+    position: relative;
+    right: 0rem;
+  }
 }
 
 .nav-menu2 {
   background-color: black;
   width: 250px;
-  height: 120vh;
+  height: 73.5vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -30,7 +43,7 @@
           justify-content: center;
   position: absolute;
   top: 0;
-  left: 79.8%;
+  left: calc(95% - 163px);
   z-index: 999999999;
 }
 
@@ -80,5 +93,15 @@ span2 {
 
 span2:hover {
   font-weight: 500;
+}
+
+.bugContainer {
+  display: inline;
+}
+
+@media (max-width: 35rem) {
+  .bugContainer {
+    display: block;
+  }
 }
 /*# sourceMappingURL=NavSideBar.css.map */
