--- a/front-end/src/Styles/HolderCSS/Holder.css
+++ b/front-end/src/Styles/HolderCSS/Holder.css
@@ -44,6 +44,7 @@
 
 .holderCanvas__buttonContainer__widthBox__widthButtonsTitle {
   font-weight: 500;
+  width: 7rem;
 }
 
 .holderCanvas__buttonContainer__widthBox__widthButtons {
